package pagamento.core;

public interface Pagamento {
    double getValor();
    String getDescricao();
}